kubernetes/manifests/myapp-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: myapp
  name: myapp
  namespace: myapp
spec:
  replicas: 2
  selector:
    matchLabels:
      app: myapp
  strategy: {}
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
      - image: 975688738801.dkr.ecr.us-west-2.amazonaws.com/springclinic:latest
        name: spring-app
        resources: {}
        startupProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 600
          periodSeconds: 10
          failureThreshold: 20
        readinessProbe:
          httpGet:
            path: /
            port: 8080
          initialDelaySeconds: 600
          periodSeconds: 5
          failureThreshold: 4
