kubernetes/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "springclinic"
  namespace: myapp
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
  labels:
    app: myapp
spec:
  rules:
    - http:
        paths:
          - path: /*
            pathType: ImplementationSpecific
            backend:
              service:
                name: "springclinic-svc"
                port:
                  number: 8080
          # - path: /*
          #   pathType: ImplementationSpecific
          #   backend:
          #     service:
          #       name: "mythical-mysfits-nolike"
          #       port: 
          #         number: 80
